# NIDS

./: CMakeLists.txt  README.md
dashboard/: server.js
dashboard/public/css/: styles.css
dashboard/public/js/: dashboard.js
dashboard/views/: index.html
include/: alert_system.h  config_manager.h  log_manager.h  nids.h  packet_capture.h  rule_engine.h
src/: alert_system.cpp  config_manager.cpp  log_manager.cpp  main.cpp  nids.cpp  packet_capture.cpp  rule_engine.cpp
